responsive,evenement click

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                             </ul>
                         </div>
                        
-                        <div class="row p-2">
-                            <div class="col-lg-4  btn btn-secondary" id="backward1" ><i class="fas fa-arrow-left"></i>Backward</div>
-                            <div class="col-lg-3 btn btn-success " id="forward2">Forward<i class="fas fa-arrow-right"></i></div>
+                        <div class="flex-container">
+                            <div class="flex-item-left " id="backward1" ><i class="fas fa-arrow-left"></i>Backward</div>
+                            <div class="flex-item-right " id="forward2">Forward<i class="fas fa-arrow-right"></i></div>
                           </div>
 
                     </div>
@@ -167,13 +167,13 @@
                         </div>
                         <div class="form-check p-5">
                             <input class="form-check-input" type="checkbox" value="" id="cgu" required checked>
-                            <label class="form-check-label" for="cgu">Please accept terms and conditions ?</label>
+                            <label class="form-check-label pl" for="cgu">Please accept terms and conditions ?</label>
 
                         </div>
                         
-                        <div class="row p-1">
-                            <div class="col-lg-3  btn btn-secondary" id="backward2"><i class="fas fa-arrow-left"></i>Backward</div>
-                            <div class="col-lg-3 btn btn-success submit">Submit<i class="fas fa-check"></i></div>
+                        <div class="flex-container p-1">
+                            <div class="flex-item-left_b" id="backward2"><i class="fas fa-arrow-left"></i>Backward</div>
+                            <div class="flex-item-right_s submit">Submit<i class="fas fa-check"></i></div>
                           </div>
                     </div>
                 </div>
