--- a/index.html
+++ b/index.html
@@ -34,34 +34,28 @@
                 </div>
                 <div class="card col-lg-4 col-md-6 wizard-3">
 
-                    <img src="images/form-wizard-3.jpg" class="img-fluid rounded-start" alt="..."
+                    <img src="images/audi-6655242_960_720.png" class="img-fluid rounded-start" alt="..."
                         style="height: 31rem;">
                 </div>
                 <div class="card form-row col-lg-6 col-md-6 p-5 mt-1">
                     <div class="text-center padding">
                         <h2>REGISTRATION</h2>
-
                         <div class="point">
                             <ul>
-
                                 <li>
                                     <a href="#" class="cercle_1" id="firstPage"><i class="fas fa-circle c1 "></i></a>
 
                                     <a href="#">&#8212;</a>
-
                                 </li>
                                 <li>
                                     <a href="#" class="" id="suivant1" ><i class="fas fa-circle c2"></i></a>
 
                                     <a href="#">&#8212;</a>
-
-
                                 </li>
                                 <li>
                                     <a href="#"  id="cercle_3"><i class="fas fa-circle c3"></i></a>
 
                                 </li>
-
                             </ul>
                         </div>
                     </div>
@@ -102,8 +96,6 @@
 
                             </div>
                         </div>
-
-
                         <div class="form-group col-md-6">
                             <input type="text" class="form-control col-lg-12 col-md-6 dropdown-toggle" id="Age"
                                 placeholder="Your country" data-bs-toggle="dropdown" aria-expanded="false">
@@ -114,9 +106,7 @@
                                 <li>United Kingdom</li>
                                 <li>Viet Nam</li>
                             </ul>
-                        </div>
-
-                       
+                        </div>                       
                         <div class="row p-1 ">
                             <div class="col-lg-4 col-md-12 col-ms-12 col-xs-12"></div>
 
@@ -155,7 +145,6 @@
                             <div class="flex-item-left " id="backward1" ><i class="fas fa-arrow-left"></i>Backward</div>
                             <div class="flex-item-right " id="forward2">Forward<i class="fas fa-arrow-right"></i></div>
                           </div>
-
                     </div>
                     <div class="form_three">
 
